flight sql test program